# health-check-sample

./: INSTALL_ONA.md  README.md
pipeline/: README.md  pyproject.toml
pipeline/pytest-cache-files-vwecoijq/v/cache/: nodeids
pipeline/src/gic_prefill.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pipeline/src/prefill/: __init__.py  config.py  llm_client.py  orchestrator.py  skills_loader.py
pipeline/src/prefill/answering/: __init__.py  answerer.py  prompts.py  slicer.py
pipeline/src/prefill/extractors/: __init__.py  arb.py  base.py  classifier.py  confluence.py  github.py  merger.py  risk_assessment.py  sharepoint.py
pipeline/src/prefill/populator/: __init__.py  excel_writer.py
pipeline/tests/: conftest.py  test_answerer.py  test_extractor_base.py  test_llm_client.py  test_merger.py  test_orchestrator_dry_run.py  test_populator.py  test_skills_loader.py
skills/gic-app-health-check/: SKILL.md
skills/gic-app-health-check/assets/: element-source-routing.json  level-definitions.json  questions.json
skills/gic-app-health-check/references/: elements.md  framework.md  gic-tooling.md  industry-sources.md  level-definitions.md  questions.md  responses.md  scoring.md  verification.md
skills/gic-app-health-check/scripts/: justify.py  score.py  validate.py
skills/gic-source-extractors/: SKILL.md
skills/gic-source-extractors/assets/: schema.json
skills/gic-source-extractors/references/: arb.md  confluence.md  github.md  provenance.md  risk-assessment.md  schema.md  sharepoint.md
