[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gic-prefill"
version = "0.1.0"
description = "Pre-fill pipeline for the GIC Application Health Check. Reads source artefacts, extracts structured data per the gic-source-extractors skill, answers rubric questions per the gic-app-health-check skill, populates the v0.9 Checklist Excel."
authors = [{name = "App Health Check workstream"}]
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
anthropic = [
    "anthropic>=0.40.0",
]

[project.scripts]
gic-prefill = "prefill.orchestrator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
